IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/24/12: In eTomo, modified output to newst*.com to work with colornewst.
(Bug# 1612)

4/20/12: Fixed 3dmod's handling of autocontrasting with contrast reversed so
that it produces a mean display value at the target mean, and made it adjust
contrast when float is on and contrast is reversed (In 4.5).

4/20/12: In eTomo - Join, fixed the print actions functionality, which was not
printing some file copies.(Bug# 1610)

4/20/12: Prevented eTomo from unchecking a disabled computer checkbox in the
Parallel Processing table when there is only one row (In 4.5).(Bug# 1613)

4/17/12: Added Colornewst to process RGB color files with Newstack.

4/17/12: In eTomo - Tomogram Generation, substituted tomogram height and Y
shift for starting, ending, and increment slice.(Bug# 1468)


4/15/12: Made clip splitrgb able to extract a subset in Z, and joinrgb able to
append to an existing color file, so that a file can be processed in chunks.

4/15/12: Fixed origin change when resizing with clip (In 4.5).

3/28/12: Fixed division by 0 in Splittilt with small number of input slices
(In 4.5).

3/26/12: IMOD_4-6-0 and branch to IMOD_4-5-0
3/25/12: Made Findcontrast scale data properly for float data regardless of
range and made it handle incorrect file min/max as well as possible.

3/23/12: In eTomo - Tomogram Generation preventing GPU parallel processing
when the only GPU available in the local host.(Bug# 1555)

3/23/12: In eTomo - PEET, added more error checking to the startup dialog.
(Bug# 1607)

3/22/12: In eTomo - Final Aligned Stack, displaying the expected defocus in
microns.(Bug# 1604)

3/22/12: In eTomo - Final Aligned Stack, fixed a bug where the erase beads
"diameter to erase" value was not being binned.(Bug# 1600)

3/21/12: Fixed problems in warping due to accessing data out of range,
unmasked by fixes on 3/7/12.

3/19/12: In eTomo getting EXCLUDELIST for tilt.com from align.log when